--- a/zeppelin-server/pom.xml
+++ b/zeppelin-server/pom.xml
@@ -161,6 +161,27 @@
     </dependency>
 
     <dependency>
+     <groupId>io.buji</groupId>
+     <artifactId>buji-pac4j</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.pac4j</groupId>
+      <artifactId>pac4j-core</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.pac4j</groupId>
+      <artifactId>pac4j-oidc</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>libpam4j</artifactId>
       <version>${libpam4j.version}</version>
